--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,100 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+
 <resources>
 
     <string name="app_name">ALL 4 OCEAN</string>
 
     <string name="curiosidade">EXISTEM LAGOS E RIOS ABAIXO DA SUPERFÍCIE DO OCEANO Algumas superfícies no oceano apresentam visões que não parecem fazer nenhum sentido lógico – rios e lagos, alguns deles com quilômetros de extensão, podem se estender pelo solo mesmo estando submersos. Como pode uma massa de água existir em uma massa de água? A água do fundo do mar infiltra-se e dissolve as camadas de sal, formando depressões. Como a água na depressão é mais densa do que a água ao seu redor, ela se acomoda na depressão e forma uma piscina distinta</string>
-
+    <string name="voce_sabia">Você Sabia?</string>
+    <string name="come_ar">Começar</string>
+    <string name="vamos_atualizar_o_seu_cadastro">Vamos atualizar o seu Cadastro</string>
+    <string name="nome">Nome</string>
+    <string name="telefone">Telefone</string>
+    <string name="salvar">Salvar</string>
+    <string name="como_eu_posso_ajudar">Como eu Posso Ajudar?</string>
+    <string name="informacoes_como_ajudar">Aqui estão algumas maneiras de ajudar a Economia Azul:\n\n1. Reduza o uso de plástico descartável.\n\n2. Participe de iniciativas de limpeza costeira.\n\n3. Apoie empresas e produtos sustentáveis.\n\n4. Eduque-se sobre os oceanos e sua importância para o planeta.\n\n5. Contribua para organizações de conservação marinha.\n\n6. Pratique pesca sustentável.\n\n7. Promova a conscientização sobre a importância dos oceanos para a vida na Terra.</string>
+    <string name="home">Início</string>
+    <string name="buscar">Buscar</string>
+    <string name="atulizar_cadastro">Atualizar Cadastro</string>
+    <string name="email">Email</string>
+    <string name="senha">Senha</string>
+    <string name="confirmacao_senha">Confirmação de Senha</string>
+    <string name="cadastrar">Cadastrar</string>
+    <string name="voltar">Voltar</string>
+    <string name="_25_curiosidades_sobre_os_oceanos">25 CURIOSIDADES SOBRE OS OCEANOS</string>
+    <string name="Curiosidade">Curiosidade</string>
+    <string name="sobre">Sobre</string>
+    <string name="ajudar">Ajudar</string>
+    <string name="sair">Sair</string>
+    <string name="ajude_a_cuidar_dos_nossos_oceanos">Ajude a cuidar dos nossos oceanos!!</string>
+    <string name="bem_vindo">Bem-Vindo</string>
+    <string name="esqueci_a_senha">Esqueci a Senha</string>
+    <string name="entrar">Entrar</string>
+    <string name="enviar">Enviar</string>
+    <string name="projeto_all4ocean">Projeto: All4Ocean</string>
+    <string name="economia_azul_informa">Economia Azul: Informações sobre a Economia Azul aqui…</string>
+    <string name="preencha_todos_os_campos">Preencha todos os campos!!</string>
+    <string name="email_invalido">Email inválido!!</string>
+    <string name="email_exemplo">Exemplo de email: usuario@gmail.com</string>
+    <string name="senhas_diferentes">As senhas devem ser iguais!!</string>
+    <string name="senha_curta">A senha deve ter pelo menos 6 caracteres</string>
+    <string name="cadastro_sucesso">Cadastro realizado com sucesso</string>
+    <string name="usuario_cadastrado">Usuário já cadastrado</string>
+    <string name="ok">OK</string>
+    <string name="curiosidade_texto">curiosidade_texto</string>
+    <string name="curiosidade_titulo">curiosidade_titulo</string>
+    <string name="curiosidade_1">Curiosidade 1: Os oceanos cobrem 71% da superfície da Terra.</string>
+    <string name="curiosidade_2">Curiosidade 2: A maior parte da vida na Terra está nos oceanos.</string>
+    <string name="curiosidade_3">Curiosidade 3: Os oceanos produzem mais de 50% do oxigênio do planeta.</string>
+    <string name="curiosidade_4">Curiosidade 4: Existem mais artefatos históricos submersos no mar do que em todos os museus do mundo.</string>
+    <string name="curiosidade_5">Curiosidade 5: O maior animal do mundo, a baleia azul, vive nos oceanos.</string>
+    <string name="curiosidade_6">Curiosidade 6: Menos de 5% dos oceanos do mundo foram explorados.</string>
+    <string name="curiosidade_7">Curiosidade 7: As correntes oceânicas transportam calor por todo o globo.</string>
+    <string name="curiosidade_8">Curiosidade 8: Os recifes de coral são conhecidos como florestas tropicais do mar.</string>
+    <string name="curiosidade_9">Curiosidade 9: O oceano contém mais de 20 milhões de toneladas de ouro.</string>
+    <string name="curiosidade_10">Curiosidade 10: A Fossa das Marianas é o ponto mais profundo dos oceanos.</string>
+    <string name="curiosidade_11">Curiosidade 11: A temperatura da água do mar pode influenciar o clima global.</string>
+    <string name="curiosidade_12">Curiosidade 12: A maior cadeia de montanhas do mundo está submersa no oceano.</string>
+    <string name="curiosidade_13">Curiosidade 13: As medusas são alguns dos organismos mais antigos do planeta.</string>
+    <string name="curiosidade_14">Curiosidade 14: O som viaja cinco vezes mais rápido na água do que no ar.</string>
+    <string name="curiosidade_15">Curiosidade 15: Existem lagos e rios subaquáticos nos oceanos.</string>
+    <string name="curiosidade_16">Curiosidade 16: O oceano abriga mais de 90% do habitat disponível para a vida.</string>
+    <string name="curiosidade_17">Curiosidade 17: Os tsunamis são ondas gigantes causadas por terremotos submarinos.</string>
+    <string name="curiosidade_18">Curiosidade 18: A camada de gelo marinho do Ártico está diminuindo.</string>
+    <string name="curiosidade_19">Curiosidade 19: O peixe-boi, um mamífero marinho, é conhecido como vaca do mar.</string>
+    <string name="curiosidade_20">Curiosidade 20: Existem vulcões subaquáticos ativos.</string>
+    <string name="curiosidade_21">Curiosidade 21: As águas oceânicas são compostas por 3,5% de sal.</string>
+    <string name="curiosidade_22">Curiosidade 22: O oceano possui uma biodiversidade incrível e ainda desconhecida.</string>
+    <string name="curiosidade_23">Curiosidade 23: O krill, pequeno crustáceo, é uma das bases da cadeia alimentar marinha.</string>
+    <string name="curiosidade_24">Curiosidade 24: As ondas são causadas principalmente pelo vento.</string>
+    <string name="curiosidade_25">Curiosidade 25: O mar tem um papel crucial no ciclo da água.</string>
+    <string name="detalhe_curiosidade_1">Detalhe da Curiosidade 1: Os oceanos não são distribuídos uniformemente, com a maioria da água concentrada no hemisfério sul.</string>
+    <string name="detalhe_curiosidade_2">Detalhe da Curiosidade 2: Cerca de 94% das espécies de vida do planeta são aquáticas.</string>
+    <string name="detalhe_curiosidade_3">Detalhe da Curiosidade 3: O fitoplâncton nos oceanos é responsável por grande parte da produção de oxigênio.</string>
+    <string name="detalhe_curiosidade_4">Detalhe da Curiosidade 4: Os oceanos são um vasto depósito de história, com muitos naufrágios e ruínas submersas.</string>
+    <string name="detalhe_curiosidade_5">Detalhe da Curiosidade 5: As baleias azuis podem crescer até 30 metros de comprimento e pesar até 200 toneladas.</string>
+    <string name="detalhe_curiosidade_6">Detalhe da Curiosidade 6: A exploração dos oceanos é limitada por sua profundidade e pressão extremas.</string>
+    <string name="detalhe_curiosidade_7">Detalhe da Curiosidade 7: As correntes oceânicas são impulsionadas pelo vento e pela rotação da Terra.</string>
+    <string name="detalhe_curiosidade_8">Detalhe da Curiosidade 8: Os recifes de coral abrigam cerca de 25% de toda a vida marinha.</string>
+    <string name="detalhe_curiosidade_9">Detalhe da Curiosidade 9: O ouro está dissolvido na água do mar em pequenas concentrações.</string>
+    <string name="detalhe_curiosidade_10">Detalhe da Curiosidade 10: A Fossa das Marianas tem uma profundidade de cerca de 11.034 metros.</string>
+    <string name="detalhe_curiosidade_11">Detalhe da Curiosidade 11: Fenômenos como El Niño e La Niña são exemplos de como a temperatura da água influencia o clima.</string>
+    <string name="detalhe_curiosidade_12">Detalhe da Curiosidade 12: A Dorsal Mesoatlântica é uma cadeia montanhosa submersa que se estende por cerca de 65.000 km.</string>
+    <string name="detalhe_curiosidade_13">Detalhe da Curiosidade 13: As medusas existem há mais de 500 milhões de anos.</string>
+    <string name="detalhe_curiosidade_14">Detalhe da Curiosidade 14: O som se propaga mais rápido na água devido à sua densidade.</string>
+    <string name="detalhe_curiosidade_15">Detalhe da Curiosidade 15: Lagos e rios subaquáticos são formados por diferenças de salinidade.</string>
+    <string name="detalhe_curiosidade_16">Detalhe da Curiosidade 16: Os oceanos fornecem o maior habitat contínuo na Terra.</string>
+    <string name="detalhe_curiosidade_17">Detalhe da Curiosidade 17: Os tsunamis podem devastar áreas costeiras quando atingem a terra.</string>
+    <string name="detalhe_curiosidade_18">Detalhe da Curiosidade 18: A redução do gelo marinho afeta o habitat de espécies árticas.</string>
+    <string name="detalhe_curiosidade_19">Detalhe da Curiosidade 19: O peixe-boi é um herbívoro que vive em águas costeiras rasas e rios.</string>
+    <string name="detalhe_curiosidade_20">Detalhe da Curiosidade 20: Vulcões subaquáticos podem formar novas ilhas quando entram em erupção.</string>
+    <string name="detalhe_curiosidade_21">Detalhe da Curiosidade 21: O sal nos oceanos provém da erosão das rochas terrestres.</string>
+    <string name="detalhe_curiosidade_22">Detalhe da Curiosidade 22: Novas espécies marinhas são descobertas constantemente.</string>
+    <string name="detalhe_curiosidade_23">Detalhe da Curiosidade 23: O krill é vital para muitas espécies marinhas, incluindo baleias e pingüins.</string>
+    <string name="detalhe_curiosidade_24">Detalhe da Curiosidade 24: A energia eólica que se transfere para a superfície do oceano gera ondas.</string>
+    <string name="detalhe_curiosidade_25">Detalhe da Curiosidade 25: O oceano é fundamental no ciclo da água, incluindo evaporação e precipitação.</string>
+    <string name="email_ou_senha_invalidos">Email ou senha invalidos</string>
+    <string name="projeto_info">Projeto: All4Ocean\n\nAll4Ocean é um aplicativo desenvolvido para conscientização e proteção dos oceanos. Nosso objetivo é educar as pessoas sobre a importância dos oceanos e incentivar ações para preservar o meio ambiente marinho.</string>
+    <string name="economia_azul_info">Economia Azul:\n\nA Economia Azul se refere a todas as atividades econômicas relacionadas aos oceanos e mares. Inclui setores como pesca, turismo, transporte marítimo, energia renovável oceânica, entre outros.</string>
 
 </resources>
